<resources>
    <string name="app_name">QuizApp</string>
    <string name="quiz_question">Question</string>
    <string name="trueBtn">True</string>
    <string name="falseBtn">False</string>
    <string name="score">Score: </string>
    <string name="history">History</string>


    <string-array name="data">
        <item>Score 1</item>
        <item>Score 2</item>
        <item>Score 3</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>